Fixing background colors on smaller screens + tutorial flow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-  overflow-y: scroll;
+  overflow: auto;
 }
 
 a {
